# tauTrader

./: LICENSE  README.md  pyproject.toml  run_all.py
docs/: kfold_cv.md  limitations.md  methodology.md
experiments/: map_tau.py  train_kfold.py  train_model.py
quant_lstm/: cv_evaluate.py  cv_output.py  data_loader.py  evaluate.py  feature_engineering.py  figures.py  map_tau_utils.py  model.py  preprocessing.py  train.py
quant_lstm/configs/: config.yaml
raw_data/: apple_data.csv
results/APPL_daily_experiment/: APPL_daily_experiment_best_weights.keras  APPL_daily_experiment_best_weights_k_fold_0_of_10.keras  APPL_daily_experiment_best_weights_k_fold_1_of_10.keras  APPL_daily_experiment_best_weights_k_fold_2_of_10.keras  APPL_daily_experiment_best_weights_k_fold_3_of_10.keras  APPL_daily_experiment_best_weights_k_fold_4_of_10.keras  APPL_daily_experiment_best_weights_k_fold_5_of_10.keras  APPL_daily_experiment_best_weights_k_fold_6_of_10.keras  APPL_daily_experiment_best_weights_k_fold_7_of_10.keras  APPL_daily_experiment_best_weights_k_fold_8_of_10.keras  APPL_daily_experiment_best_weights_k_fold_9_of_10.keras  APPL_daily_experiment_final_model.keras  APPL_daily_experiment_linear_fit.json  APPL_daily_experiment_training_report.json
results/APPL_daily_experiment/modified_data/: APPL_daily_experiment_data_features_clipped.csv  APPL_daily_experiment_data_features_clipped_normalized_test.csv  APPL_daily_experiment_data_features_clipped_normalized_train.csv  APPL_daily_experiment_data_features_clipped_normalized_val.csv  (+10 more)
